@@ -6,9 +6,11 @@ squid3 (3.3.3-2) UNRELEASED; urgency=low
     - Added Build-Depend on pkg-config to solve FTBFS when ecap is enabled
     - Fixed package descriptions
     - Added Build-Depend on libnetfilter-conntrack-dev
+    - Added Suggests on winbindd for NTLM authentication
 
   * debian/patches/01-cf.data.debian.patch
     - Removed change to visible_hostname defaut value (Closes: #705983)
+    - Fixed path of ntlm_auth helper in example
 
   * debian/rules
     - Removed --enable-arp-acl options obsoleted by --enable-eui
